<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/FRAME_BGCOlOR"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/titleTextView"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/connMethodTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/connMethodTextView"
            android:textSize="18sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:stretchColumns="*">

            <TableRow>

                <Button
                    android:id="@+id/bleMethodButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bleMethodButton" />

                <Button
                    android:id="@+id/wifiMethodButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wifiMethodButton" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:id="@+id/bleMethodLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:minWidth="110dp"
                    android:text="@string/wifiSsidTextView" />

                <EditText
                    android:id="@+id/wifiSsidEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="Hyrio"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:minWidth="110dp"
                    android:text="@string/wifiPwdTextView" />

                <EditText
                    android:id="@+id/wifiPwdEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="12345678"
                    android:layout_marginEnd="10dp"
                    android:singleLine="true" />
            </LinearLayout>

            <Button
                android:id="@+id/wifiInfoSubmitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/wifiSubmitButton" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/wifiMethodLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:minWidth="110dp"
                android:text="@string/ipTextView"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ipEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="18sp" />
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:stretchColumns="*">

            <TableRow>

                <Button
                    android:id="@+id/startButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/startButton" />

                <Button
                    android:id="@+id/stopButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stopButton" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/resetButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/resetButton" />

                <Button
                    android:id="@+id/autoCalcButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/autoCalcButton" />
            </TableRow>
        </TableLayout>

        <com.example.radarapp.AxesView
            android:id="@+id/iDiffWaveView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            app:isHave2DataSet="false"
            app:title="@string/iDiffWavePanelTitle" />

        <com.example.radarapp.AxesView
            android:id="@+id/iPosNegWaveView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            app:isHave2DataSet="true"
            app:title="@string/iPosNegWavePanel" />

        <com.example.radarapp.AxesView
            android:id="@+id/qDiffWaveView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            app:isHave2DataSet="false"
            app:title="@string/QDiffWavePanelTitle" />

        <com.example.radarapp.AxesView
            android:id="@+id/qPosNegWaveView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            app:isHave2DataSet="true"
            app:title="@string/QPosNegWavePanel" />

        <com.example.radarapp.AxesView
            android:id="@+id/ecgWaveView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            app:isHave2DataSet="false"
            app:title="@string/ecgWavePanel" />
    </LinearLayout>
</ScrollView>